--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             <div class="section-title">
                 <h2>About</h2>
                 <p>Hi I'm Kariem ,
-                    over 3 years of experience in Software Testing Engineer
+                    over 3 years of experience in Software Testing Engineer .
                     in the software testing the important matter is publish product with more Quality , this make me
                     feeling satisfaction and pleasure about my working because of my analytical mindset and always
-                    thinking about how to enhance the products & services, with a demonstrated history of working in the
+                    thinking about how to enhance the products & services . with a demonstrated history of working in the
                     computer software industry. Seeking a improving my technical Skills and experince as a Senior
                     software testing engineer where I can contribute in promoting the quality level and gain new
                     knowledge and expertise.</p>
@@ -160,7 +160,7 @@
                         <h6>April 2021- November 2021</h6>
                     </div>
                     <div class="resume-item">
-                        <h5>Software َQuality control Engineer </h5>
+                        <h5>Software Quality control Engineer </h5>
                         <p><em> <strong>Bedab Software</strong></em></p>
                         <h6>Jul 2019- April 2021</h6>
                         <ul>
@@ -168,7 +168,7 @@
                             <li>CRM Modules</li>
                             <li>mobile App (pickn'go , transportation application)</li>
                             <li>time management APP (Tpro)</li>
-                            <li> Online Training Solution (Web Ap)</li>
+                            <li> Online Training Solution (Web App)</li>
                         </ul>
                     </div>
                     </ul>
