--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 <footer id="footer">
     <div class="container">
         <div class="copyright">
-            &copy; Copyright to <strong><span>portfolio</span></strong>
+            &copy; Copyright to <strong><span>KariemGamal</span></strong>
             <!--            Mohamed-Khaled-->
         </div>
         <div class="credits">
