--- a/index.html
+++ b/index.html
@@ -84,14 +84,10 @@
 
             <div class="section-title">
                 <h2>About</h2>
-                <p>Hi I'm Kariem ,
-                    over 3 years of experience in Software Testing Engineer .
-                    in the software testing the important matter is publish product with more Quality , this make me
-                    feeling satisfaction and pleasure about my working because of my analytical mindset and always
-                    thinking about how to enhance the products & services . with a demonstrated history of working in the
-                    computer software industry. Seeking a improving my technical Skills and experince as a Senior
-                    software testing engineer where I can contribute in promoting the quality level and gain new
-                    knowledge and expertise.</p>
+                <p>Hi, I'm Kariem, over 3 years of experience as a Software Testing Engineer . 
+                    in software testing the important matter is to publish product with more Quality, 
+                    this make me feel satisfaction and pleasure about my work because of my analytical mindset and always thinking about how to enhance the products & services. 
+                    with a demonstrated history of working in the computer software industry. Seeking to improve my technical skills and experience as a Senior Software testing engineer where I can contribute to promoting the quality level and gain new knowledge and expertise.</p>
             </div>
 
             <div class="row">
