--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 <footer id="footer">
     <div class="container">
         <div class="copyright">
-            &copy; Copyright to <strong><span>KariemGamal</span></strong>
+            &copy; Copyright to <strong><span>iPortfolio</span></strong>
             <!--            Mohamed-Khaled-->
         </div>
         <div class="credits">
