--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right">
-                    <img src="assets/img/karimImage.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/personlaimage.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Quality Control Engineer</h3>
