--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="d-flex flex-column">
 
         <div class="profile">
-            <img src="assets/img/karimImage.jpg" alt="" class="img-fluid rounded-circle">
+            <img src="assets/img/personlaimage.jpg" alt="" class="img-fluid rounded-circle">
             <h1 class="text-light"><a href="index.html">Karim Gamal Rashed</a></h1>
             <div class="social-links mt-3 text-center">
 
