--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <div class="col-lg-6" data-aos="fade-up">
                     <h2 class="resume-title">Professional Experience</h2>
                     <div class="resume-item">
-                        <h5>Mide Senior Software Quality Control Engineer</h5>
+                        <h5>Senior Software Quality Control Engineer</h5>
                         <p><em> <strong> MaxAB </strong> </em></p>
                         <h6>November 2021- Present</h6>
                     </div>
